// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oneOf operator support renders empty 1`] = `
"<div class="openapi">

# oneOf

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "type": "string",
    "baz": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 ...rest 
|
 **oneOf** [Dog](#dog)

Dog class 
||

||
 ...rest 
|
 **oneOf** [Cat](#cat)

Cat class 
|||#

</div>

<div class="openapi-entity">

### Dog

Dog class

#|||
 **Name** 
|
 **Description** 
||

||
 baz 
|
 **Type:** string 
||

||
 type 
|
 **Type:** string 
|||#

</div>

<div class="openapi-entity">

### Cat

Cat class

#|||
 **Name** 
|
 **Description** 
||

||
 foo 
|
 **Type:** string 
||

||
 type 
|
 **Type:** string 
|||#

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "type": "string",
    "baz": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 ...rest 
|
 **oneOf** [Dog](#dog)

Dog class 
||

||
 ...rest 
|
 **oneOf** [Cat](#cat)

Cat class 
|||#

</div>

</div>
<!-- markdownlint-disable-file -->

</div>"
`;

exports[`oneOf operator support renders filled 1`] = `
"<div class="openapi">

# oneOf

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "name": "string",
    "age": 0,
    "type": "string",
    "baz": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 age 
|
 **Type:** number 
||

||
 name 
|
 **Type:** string 
||

||
 ...rest 
|
 **oneOf** [Dog](#dog)

Dog class 
||

||
 ...rest 
|
 **oneOf** [Cat](#cat)

Cat class 
|||#

</div>

<div class="openapi-entity">

### Dog

Dog class

#|||
 **Name** 
|
 **Description** 
||

||
 baz 
|
 **Type:** string 
||

||
 type 
|
 **Type:** string 
|||#

</div>

<div class="openapi-entity">

### Cat

Cat class

#|||
 **Name** 
|
 **Description** 
||

||
 foo 
|
 **Type:** string 
||

||
 type 
|
 **Type:** string 
|||#

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "name": "string",
    "age": 0,
    "type": "string",
    "baz": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 age 
|
 **Type:** number 
||

||
 name 
|
 **Type:** string 
||

||
 ...rest 
|
 **oneOf** [Dog](#dog)

Dog class 
||

||
 ...rest 
|
 **oneOf** [Cat](#cat)

Cat class 
|||#

</div>

</div>
<!-- markdownlint-disable-file -->

</div>"
`;

exports[`oneOf operator support renders parameter 1`] = `
"<div class="openapi">

# oneOf

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "pet": {
        "type": "string",
        "baz": "string"
    },
    "type": "string",
    "baz": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 pet 
|
 **Type:** [Dog](#dog) 
or [Cat](#cat) 
||

||
 ...rest 
|
 **oneOf** [Dog](#dog)

Dog class 
||

||
 ...rest 
|
 **oneOf** [Cat](#cat)

Cat class 
|||#

</div>

<div class="openapi-entity">

### Dog

Dog class

#|||
 **Name** 
|
 **Description** 
||

||
 baz 
|
 **Type:** string 
||

||
 type 
|
 **Type:** string 
|||#

</div>

<div class="openapi-entity">

### Cat

Cat class

#|||
 **Name** 
|
 **Description** 
||

||
 foo 
|
 **Type:** string 
||

||
 type 
|
 **Type:** string 
|||#

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "pet": {
        "type": "string",
        "baz": "string"
    },
    "type": "string",
    "baz": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 pet 
|
 **Type:** [Dog](#dog) 
or [Cat](#cat) 
||

||
 ...rest 
|
 **oneOf** [Dog](#dog)

Dog class 
||

||
 ...rest 
|
 **oneOf** [Cat](#cat)

Cat class 
|||#

</div>

</div>
<!-- markdownlint-disable-file -->

</div>"
`;
